--- a/style.css
+++ b/style.css
@@ -43,9 +43,7 @@ body {
 }
 
 .tema button {
-  position: absolute;
-  left: 1350px;
-  top: 111px;
+  align-self: flex-end;
   padding: 8px 16px;
 
   font-family: Roboto;
